--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
 		    <groupId>javax.validation</groupId>
 		    <artifactId>validation-api</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
+		    <version>2.3.3.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 
