--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
 		    <artifactId>spring-boot-starter-security</artifactId>
 		    <version>2.3.3.RELEASE</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.auth0</groupId>
+		    <artifactId>java-jwt</artifactId>
+		    <version>3.16.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
