--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+app:
+  jwtSecret: bezKoderSecretKey
+  jwtExpirationMs: 86400000
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/wallet?useSSL=false
